fixed stupid overflow bug

--- a/client/index.sass
+++ b/client/index.sass
@@ -31,9 +31,11 @@ body
   height: $footer-height
 
 .wrapper
+  overflow: hidden
   margin: 0 auto
 
 .btc-row
+  overflow: hidden
   padding: 5em .95em 2.5em
   text-align: center
   position: relative
